css/style.css
body {
    margin: 0;
    /* Makes the #page-content expand to fill the remaining space on the page
    so that the footer is always at the bottom. */
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

#page-content {
    padding: 35px;
    box-sizing: border-box;
    flex-grow: 1;
    max-width: 1300px;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}

#page-content p:first-of-type:not(:only-of-type) {
    margin-top: 0;
}

#page-content p:last-of-type:not(:only-of-type) {
    margin-bottom: 0;
}

h1, h2, h3, a, .image-with-caption * {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

p, p a, li {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

p, h1, h2, h2 > a, h3, li {
    color: #3f3f3f;
}

h1 {
    font-size: 22;
    text-transform: uppercase;
}

h2 {
    font-size: 18;
    text-transform: uppercase;
}

img {
    max-height: 700px;
}

#page-content p:not(.aside p),
#page-content li {
    font-size: 17.5;
    line-height: 28px;
}

#page-content p:not(.image-with-caption p):not(.aside p):not(#biography p),
#page-content li {
    margin-bottom: 35;
    margin-top: 35;
}

ol, #page-content ul {
    margin: 35px 0;
}

#page-content li {
    margin: 10px;
}

#page-content li::marker {
    font-weight: bold;
    font-size: 19;
}

.underlined-title {
    border-style: solid;
    border-color: rgb(218, 218, 218);
    border-width: 0 0 1px 0;
    padding-bottom: 15px;
    margin-top: 65;
}

.image-grid {
    margin: auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(max(250px, 100%/5), 1fr));
    grid-gap: 5px;
    margin-top: 35px;
}

.image-grid img {
    width: 100%;
    object-fit: cover;
}

.image-grid-two-columns {
    grid-template-columns: repeat(2, 1fr);
}

.image-grid-two-columns img {
    height: 430px;
}

.image-grid-three-columns {
    grid-template-columns: repeat(3, 1fr);
}

.image-grid-three-columns img {
    height: 330px;
}

.image-grid-four-columns {
    grid-template-columns: repeat(4, 1fr);
}

.image-grid-four-columns img {
    height: 270px;
}

.image-grid-full-height img {
    object-fit: scale-down;
    height: 100%;
}

.span-grid-row {
    grid-row: span 2;
}

.span-grid-row img {
    height: 100%;
}

.centre-element {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.single-image-height {
    width: min(500px, 100%);
}

.full-width-media-or-max:not(.column .full-width-media-or-max) {
    margin: 60px;
}

.image-with-caption:not(.column .image-with-caption) {
    margin-top: 60px;
    margin-bottom: 60px;
}

.image-and-grid > .image-grid {
    margin-top: -40;
}

.centre-image-link,
.image-with-caption:not(.column .image-with-caption),
.full-width-media-or-max {
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.centre-image-link img,
.image-with-caption img:not(.column .image-with-caption img),
.full-width-media-or-max img,
.full-width-media-or-max video {
    max-width: 100%;
}

.section-divider {
    width: 100%;
    border-style: solid;
    border-color: rgb(218, 218, 218);
    border-width: 0 0 1px 0;
    margin: 35px 0;

}

.image-with-caption:not(.column) {
    width: 75%;
}

.image-with-caption p {
    text-align: center;
    margin-top: 10px;
    font-size: 14 !important;
}

.two-column-layout {
    display: flex;
    gap: 40px;
}

.two-column-layout p {
    margin-top: 0px !important;
}

.column {
    width: 50%;
}

.centre-text {
    text-align: center;
}

.button {
    background-color: black;
    padding: 15px;
    margin: 20px;
    color: white;
    display: inline-block;
}

.social-icons {
    display: flex;
    justify-content: center;
    gap: 5px;
}

.social-icons img {
    height: 50px;
    width: 50px;
}

.embedtool {
    position: relative;
    height: 0;
    padding-top: 56%;
    overflow: hidden;
    max-width: 100%;
}

.embedtool iframe, .embedtool object, .embedtool embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.embedtool .fluid-vids {
    position: initial !important
}

#yt-embed-container {
    max-width: 1080px;
}


/* Vimeo */
.vimeo-embed-container {
    position: relative;
    padding: 100% 0 0 0;
    margin-top: 50px;
    margin-bottom: 50px;
}

.vimeo-embed-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: block;
}

@media(min-width:750px) {
    .vimeo-embed-container {
        width: 600px;
        height: 600px;
        padding: 0 0 0 0;
    }
}

.vimeo-embed-container iframe,
.vimeo-embed-container object,
.vimeo-embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


@media (max-width: 1050px) {

    .image-grid-four-columns {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media (max-width: 900px) {

    .image-grid-three-columns,
    .image-grid-four-columns {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 650px) {

    .image-grid {
        grid-template-columns: 100%;
    }

    .image-grid img {
        height: 300px;
    }

    .image-grid-full-height img {
        height: auto;
    }
}

@media (max-width: 750px) {

    .image-with-caption:not(.column) {
        width: 100%;
    }

    .image-with-caption img:not(.column img) {
        width: 100%;
    }

    .two-column-layout {
        flex-direction: column;
        gap: 25px;
    }

    .column {
        width: 100%;
    }

    .column img {
        width: auto;
    }

    .centre-image-link,
    .image-with-caption,
    .image-and-grid,
    .full-width-media-or-max {
        margin: 30px 0px;
    }

    .full-width-media-or-max:not(.column .full-width-media-or-max) {
        margin: 30px 0;
    }

    .image-and-grid > .image-grid {
        margin-top: -10;
    }

    #yt-embed-container {
        width: 100%;
    }
}

